@@ -1,5 +1,6 @@
 current SVN:
 
+* Added missint aarch64 compiler-rt functions: __floatditf, etc.
 * Add wireless tools build to ecclinux.
 * Update to LLVM r257984.
 * Add less build to ecclinux.
